[package]
name = "croftsoft"
version = "0.10.1-SNAPSHOT"
authors = ["David Wallace Croft <david@CroftSoft.com>"]
description = "Re-export of com-croftsoft-* crates"
edition = "2021"
homepage = "https://www.CroftSoft.com/"
license = "MIT"
publish = false
readme = "README.md"
repository = "https://github.com/david-wallace-croft/croftsoft"

[dependencies]
com-croftsoft-core = "0.10.0"
