[package]
authors = ["David Wallace Croft <david@CroftSoft.com>"]
description = "Re-export of com-croftsoft-* crates"
edition = "2021"
homepage = "https://www.CroftSoft.com/"
license = "MIT"
name = "croftsoft"
publish = true
readme = "README.md"
repository = "https://github.com/david-wallace-croft/croftsoft"
version = "0.10.1"

[dependencies]
com-croftsoft-core = "0.14.0"
com-croftsoft-lib = "0.1.1"
